Actualización de versión del package

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue3-components",
+  "name": "@sebastiansantillan/vue3-components",
   "private": false,
-  "version": "0.1.0",
-  "description": "Paquete de componentes Vue3 con soporte typescript 5.X",
+  "version": "0.1.0-alpha",
+  "description": "Paquete de componentes Vue3 con soporte Typescript 5.X",
   "type": "module",
   "scripts": {
     "dev": "vite",
